# libmacro

./: AUTHORS  ChangeLog  Makefile.am  README.md  build.sh  configure.ac  libmacro.c  test_libmacro.c
debian/: control  postinst.ex  postrm.ex  preinst.ex  prerm.ex
